# llm-awesome-wiki

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
contracts/: README.md
contracts/schemas/: README.md  claim-record.schema.json  compare-report.schema.json  evidence-record.schema.json  review-item.schema.json  source-inventory.schema.json  source-packet.schema.json  wiki-index.schema.json  wiki-page.schema.json
docs/: core-philosophy.md  execution-roadmap.md  knowledge-to-executable.md  llm_wiki-reference.md
docs/collaboration/: README.md  person-a-contracts-validation-by-phase.md  person-a-dry-run-v2-review-brief.md  person-a-implementation-closure-review.md  person-b-workflow-closure-review.md  person-b-workflow-surface-by-phase.md  skill-runtime-vs-workflow-rules-review.md  two-person-pre-skill-tools-worksplit.md
docs/phase-plans/: README.md  phase-1-workspace-kernel.md  (+35 more)
llm_wiki_tools/: README.md  __init__.py  cli.py
plan/: README.md  log.md
rules/: README.md  claim-modality-contradiction-review-protocol.md  claim-review-routing.md  compare-gate-contract.md  distillation-rounds.md  evidence-claim-workflow.md  evidence-to-claim.md  extractor-adapter-protocol.md  generated-fields-review-routing.md  maintenance-workflow.md  raw-to-source-packet.md  review-queue-workflow.md  source-packet-to-evidence.md  source-packet-to-wiki.md  wiki-index-contract.md  wiki-overview-log-contract.md  wiki-page-routing.md  wiki-surface-workflow.md
templates/: README.md
tests/: README.md
tools/: README.md
workspace/: human-agent-rule-divergence.md
(+212 files in other folders)
